# tricycle_controller

./: CMakeLists.txt  package.xml  tricycle_controller_plugins.xml
include/tricycle_controller/: odometry.h  speed_limiter.h  tricycle_controller.h  urdf_vehicle_kinematic.h
src/: odometry.cpp  speed_limiter.cpp  tricycle_controller.cpp  urdf_vehicle_kinematic.cpp  wheel_kinematics.cpp
test/: minireach_common.launch  minireach_controllers.yaml  tricycle_controller_twist_cmd.test
test/config/: test.yaml  tricycle_controllers.yaml  tricycle_limits.yaml
test/launch/: example_driver.launch  gazebo.launch  show_tricycle.launch  spawn_controller.launch  teleop.launch  test.launch  tricycle_common.launch  view_tricycle.launch
test/rviz/: gazebo.rviz  show_tricycle.rviz
test/src/: example_driver_node.cpp  test_common.h  tricycle.cpp  tricycle.h  tricycle_driver.cpp  tricycle_driver.h  tricycle_twist_cmd_test.cpp
test/urdf/: chassis.xacro  drive_wheel_assembly.gazebo.xacro  drive_wheel_assembly.urdf.xacro  rear_wheel.xacro  support_wheel.gazebo.xacro  support_wheel.urdf.xacro  tricycle.gazebo.xacro  tricycle.urdf.xacro  wheel.xacro  wheel_steered.xacro
