<?xml version="1.0"?>
<package>
  <name>tricycle_controller</name>
  <version>0.0.0</version>
  <description>The tricycle_controller package</description>

  <maintainer email="samuel.lindgren@toyota-industries.eu">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>nav_msgs</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/tricycle_controller_plugins.xml"/>
  </export>
</package>
