<?xml version="1.0"?>
<package format="2">
  <name>tricycle_controller</name>
  <version>0.0.0</version>
  <description>The tricycle_controller package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>urdf_geometry_parser</depend>

  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>controller_manager</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/tricycle_controller_plugins.xml"/>
  </export>
</package>
